Add unfinished server code

--- a/generate_even_more_rendezvous_points.vcxproj.filters
+++ b/generate_even_more_rendezvous_points.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="targets.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="point.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="curvefp.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="result.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
