--- a/generate_even_more_rendezvous_points.vcxproj.filters
+++ b/generate_even_more_rendezvous_points.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="targets.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OpenCLFramework.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targets.h">
@@ -34,6 +37,9 @@
     </ClInclude>
     <ClInclude Include="result.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenCLFramework.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
